<resources>
    <string name="app_name" translatable="false">WhatTheByte</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="unsignedLab">Unsigned Display</string>
    <string name="signedLab">Signed Display</string>
    <string name="byteLab">Byte</string>
    <string name="asciiLab">ASCII</string>
    <string name="eraseChars">Erase Chars</string>
    <string name="binaryLabH">BinMS</string>
    <string name="binaryLab">BinLS</string>
    <string name="hexadecimalLab" translatable="false">Hex</string>
    <string name="int16Lab" translatable="false">Int16</string>
    <string name="int32Lab" translatable="false">Int32</string>
    <string name="floatLab" translatable="false">Float</string>
    <string name="overFlow">OverFlow</string>

    <string name="charHint" translatable="false">A</string>
    <string name="uByteHint" translatable="false">123</string>
    <string name="sByteHint" translatable="false">-123</string>
    <string name="binaryHint" translatable="false">11001101</string>
    <string name="hexadecimalHint" translatable="false">0123456789ABCDEF</string>
    <string name="uIntHint" translatable="false">0123456789</string>
    <string name="sIntHint" translatable="false">-0123456789</string>
    <string name="floatHint" translatable="false">-12345.67890</string>

    <string name="MsB" translatable="false">MS Byte</string>
    <string name="LsB" translatable="false">LS Byte</string>

</resources>
